--- a/participantes/ronaldo_scardini/docker-compose.yml
+++ b/participantes/ronaldo_scardini/docker-compose.yml
@@ -67,4 +67,4 @@ services:
       resources:
         limits:
           cpus: '0.85'
-          memory: '600MB' #'1400MB'
+          memory: '450MB'
